source/manage-expenses/main/default/objects/BudgetExpenseBucket__c/BudgetExpenseBucket__c.object-meta.xml
<CustomObject>
    <label>BudgetExpenseBucket</label>
    <nameField>
        <displayFormat>BEB-{00000}</displayFormat>
        <label>BudgetExpenseBucket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BudgetExpenseBucket</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>