source/manage-expenses/main/default/objects/BudgetExpenseBucket__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <referenceTo>Budget__c</referenceTo>
    <relationshipLabel>BudgetExpenseBucket</relationshipLabel>
    <relationshipName>BudgetExpenseBucket</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>