source/manage-expenses/main/default/objects/BudgetExpenseBucket__c/fields/Budgeted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Amount__c</fullName>
    <label>Budgeted Amount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>