source/manage-expenses/main/default/objects/BudgetExpenseBucket__c/fields/Expense__c.field-meta.xml
<CustomField>
    <fullName>Expense__c</fullName>
    <label>Expense</label>
    <referenceTo>Expense__c</referenceTo>
    <relationshipLabel>BudgetExpenseBucket</relationshipLabel>
    <relationshipName>BudgetExpenseBucket</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>